--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - uses: actions/cache@v3
         name: Setup pnpm cache
-        id: Cache-Work
+        id: cache
         with:
           path: |
             ${{ env.STORE_PATH }}
