[#(no branch, rebasing develop)] [#develop] test

--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -56,7 +56,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.Cache-Work.outputs.cache-hit != 'true'
         run: pnpm install
 
       - name: Lint Test
