--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -51,6 +51,7 @@ jobs:
           path: |
             ${{ env.STORE_PATH }}
             ${{ github.workspace }}/.next/cache
+            node_modules
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
