--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -44,16 +44,16 @@ jobs:
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        id: Cache-Work
-        with:
-          path: |
-            ${{ env.STORE_PATH }}
-            ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      #- uses: actions/cache@v3
+      #  name: Setup pnpm cache
+      #  id: Cache-Work
+      #  with:
+      #    path: |
+      #      ${{ env.STORE_PATH }}
+      #      ${{ github.workspace }}/.next/cache
+      #    key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install
