--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -13,9 +13,6 @@ jobs:
   test:
     name: Build Test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-versions: ${{ secrets.NODE_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,10 +23,10 @@ jobs:
           version: 8
           run_install: false
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ secrets.NODE_VERSION }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ secrets.NODE_VERSION }}
 
       #- name: Get pnpm store directory
       #  shell: bash
