--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -11,7 +11,7 @@ on:
       - main # main 브랜치로의 pull request에서 실행
 jobs:
   test:
-    name: Build Test
+    name: Test && Reporting
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,16 +20,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
           version: 8
           run_install: false
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+
 
       #- name: Get pnpm store directory
       #  shell: bash
