--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -32,7 +32,20 @@ jobs:
           run_install: false
 
 
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        id: Cache-Work
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       #- name: Get pnpm store directory
       #  shell: bash
       #  run: |
@@ -50,6 +63,7 @@ jobs:
       #      ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: pnpm install
 
       - name: Lint Test
