--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -31,34 +31,23 @@ jobs:
           version: 8
           run_install: false
 
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
       - uses: actions/cache@v3
-        name: Setup node_modules cache
+        name: Setup pnpm cache
         id: Cache-Work
         with:
           path: |
-            node_modules
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/pnpm-lock.yaml') }}
+            ${{ env.STORE_PATH }}
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node_modules-
-
-      #- name: Get pnpm store directory
-      #  shell: bash
-      #  run: |
-      #    echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      #- uses: actions/cache@v3
-      #  name: Setup pnpm cache
-      #  id: Cache-Work
-      #  with:
-      #    path: |
-      #      ${{ env.STORE_PATH }}
-      #      ${{ github.workspace }}/.next/cache
-      #    key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-pnpm-store-
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        if: steps.Cache-Work.outputs.cache-hit != 'true'
         run: pnpm install
 
       - name: Lint Test
