--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-versions: [18.12.1]
+        node-versions: 18
     steps:
       - name: Checkout
         uses: actions/checkout@v3
