--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -17,7 +17,9 @@ on:
 
 jobs:
   test:
-    name: Test && Reporting
+    # job 의 이름을 지정합니다.
+    name: Build Test
+    # 리눅스 환경에서 사용한다고 명시합니다.
     runs-on: ubuntu-latest
     # Github Action 의 실행전략을 새웁니다.
     # Node Version 을 설치할때 18 버전을 사용하도록 합니다.
@@ -26,9 +28,19 @@ jobs:
         node-versions: [18.x]
     # job 의 step 을 정의합니다.
     steps:
+      # Action 준비
+      - uses: act10ns/slack@v2
+        with:
+          status: starting
+          webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
+          message: "📣 Opened Pull Request & Build Test Start\n<${{ github.event.pull_request.html_url }}|🚀 View Pull Request>"
+        if: always()
+
+      # 이제 시작에 앞서서 Github Actions 에서 우리는 Linux 환경으로 Checkout 하여 실행하게됩니다.
       - name: Checkout
         uses: actions/checkout@v3
 
+      # 위 에서 명시한 node-version 을 활용하여 Node.js 를 설치 후 그 위에서 진행한다고 명시합니다.
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
@@ -40,6 +52,7 @@ jobs:
           version: 8
           run_install: false
 
+      # pnpm-store 의 위치를 찾아 $GITHUB_ENV 에 저장합니다.
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -49,17 +62,17 @@ jobs:
       # node_module 과 next Cache 를 caching 하여 시간을 단축할 수 있습니다.
       - uses: actions/cache@v3
         name: Setup pnpm cache
-        id: cache
+        id: Pnpm-cache
         with:
           path: |
-            node_modules
+            node_modeuls
             ${{ github.workspace }}/.next/cache
-          key: cache-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            cache-
-      # 12
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.Pnpm-cache.outputs.cache-hit != 'true'
         run: pnpm install
 
       # Lint Test 진행 합니다.
@@ -80,3 +93,12 @@ jobs:
         id: Build-Test
         run: pnpm build
         if: ${{ always() }}
+
+      - uses: act10ns/slack@v2
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: "#workflows"
+          webhook-url: ${{ secrets.SLACK_INCOMING_URL }}
+          config: .github/config/slack.yml
+        if: always()
