--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -65,7 +65,7 @@ jobs:
         id: Pnpm-cache
         with:
           path: |
-            node_modeuls
+            node_modules
             ${{ github.workspace }}/.next/cache
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
@@ -75,6 +75,7 @@ jobs:
         if: steps.Pnpm-cache.outputs.cache-hit != 'true'
         run: pnpm install
 
+      # Lint Test 진행 합니다.
       # if 문에 always() 를 추가하면 이전에 실패한 부분이 생기더라도 무조건 실행하게 됩니다.
       - name: Lint Test
         id: Lint-Test
