--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --cache --fix",
+      "eslint --fix",
       "bash -c tsc --noEmit"
     ]
   },
